<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="328dp"
    android:layout_height="175dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:background="@drawable/dialog_title_bg"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/marginSmall"
        android:paddingVertical="@dimen/marginXXSmall"
        android:text="@string/dialogAddPromoTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/textMediumSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginXSmall"
        android:gravity="center"
        android:text="@string/dialogAddPromoTitle"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXSmall"
        android:background="@drawable/card_panel_bg"
        android:textSize="@dimen/textXXSmallSize"
        android:backgroundTint="@color/gold_200"
        android:text="@string/dialogCancelButtonTitle"
        app:layout_constraintBottom_toBottomOf="@+id/applyButton"
        app:layout_constraintEnd_toStartOf="@+id/applyButton"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyButton"
        android:layout_width="0dp"
        android:textSize="@dimen/textXXSmallSize"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginXSmall"
        android:background="@drawable/card_panel_bg"
        android:backgroundTint="@color/coral_200"
        android:paddingHorizontal="@dimen/marginSmall"
        android:text="@string/dialogOkButtonTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>