<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_size_150"
        android:background="@drawable/bg_top_panel"
        app:layout_constraintTop_toTopOf="parent" />

    <com.otuscoursework.view.badge_button.ButtonWithBadge
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.otuscoursework.view.badge_button.ButtonWithBadge
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentTitle"
        style="@style/SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartFragmentTitle"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/addressMenuButton"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/addressTitle"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@id/addressCurrent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/addressCurrent"
        style="@style/BigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="Дом"
        android:maxLines="1"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressMenuButton" />

    <TextView
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyCart"
        android:textColor="@color/black_transparent_25"
        app:layout_constraintBottom_toTopOf="@+id/sizeChangerSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartListContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/bg_card_panel"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/margin_big"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/sizeChangerSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="P 360"
            android:textColor="@color/gold_200"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sizeChangerSubtitle"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_big"

        android:text="@string/promoTokenSize"

        app:layout_constraintBottom_toTopOf="@+id/tokenUser"
        app:layout_constraintStart_toStartOf="parent" />

    <com.otuscoursework.view.size_changer.SizeChanger
        android:id="@+id/tokenUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/bg_card_panel"
        android:elevation="@dimen/elevation"
        app:layout_constraintBottom_toTopOf="@id/payButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payButton"
        style="@style/ButtonStyleRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/bg_card_panel"
        android:elevation="@dimen/elevation"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>